# LAB5_Besturingssystemen2

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  config.h  connmgr.c  connmgr.h  datamgr.c  datamgr.h  main.c  sbuffer.c  sbuffer.h  sensor_db.c  sensor_db.h  sensor_node.c
lib/: CMakeLists.txt  dplist.c  dplist.h  tcpsock.c  tcpsock.h  vector.c  vector.h
